[tool.poetry]
name = "aster"
version = "0.3.0"
description = ""
authors = ["odesen <0d3s3n@gmail.com>"]
readme = "README.md"
packages = [{include = "aster", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
sqlalchemy = "^2.0.19"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
orjson = "^3.9.1"
python-dotenv = "^1.0.0"
psycopg = "^3.1.9"
strawberry-graphql = "^0.199.1"
uvicorn = "^0.23.2"
redis = "^4.6.0"
alembic = "^1.11.1"
httpx = "^0.24.1"
structlog = "^23.1.0"
arq = "^0.25.0"
prometheus-fastapi-instrumentator = "^6.1.0"
asgiref = "^3.7.2"
python-multipart = "^0.0.6"
typing-extensions = "~4.6.0"
typer = "^0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
coverage = "^7.2.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
strawberry-graphql = {extras = ["debug-server"], version = "^0.199.1"}
mypy = "^1.4.1"
pre-commit = "^3.3.3"
dirty-equals = "^0.6.0"
rich = "^13.4.2"

[tool.poetry.group.ci.dependencies]
dagger-io = "^0.6.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
    "strawberry.ext.mypy_plugin",
]

warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "jose",
    "passlib.context",
    "redis.asyncio.connection",
    "redis.asyncio",
    "celery",
    "strawberry",
]
ignore_missing_imports = true

[tool.ruff]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # flake-8
    "C",
    "B",
    # isort
    "I",
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers"
]
xfail_strict = true
filterwarnings = [
    # For passlib
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
