[project]
name = "aster"
licence = "MIT"
requires-python = ">=3.10"
authors = [{ name = "odesen", email = "0d3s3n@gmail.com" }]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg",
    "alembic",
    "httpx",
    "structlog",
    "typer",
    "redis",
    "python-jose",
    "passlib",
    "uvicorn",
    "arq",
    "orjson",
    "strawberry-graphql",
    "prometheus-fastapi-instrumentator",
    "python-multipart",
    "asgiref",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "coverage[toml]", "dirty-equals"]
dev = ["ruff", "mypy", "rich"]
ci = ["dagger-io"]
docs = ["mkdocs"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
    "strawberry.ext.mypy_plugin",
]

warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "jose",
    "passlib.context",
    "redis.asyncio.connection",
    "redis.asyncio",
    "celery",
    "strawberry",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-config", "--strict-markers"]
xfail_strict = true
filterwarnings = [
    # For passlib
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[tool.coverage.run]
source_pkgs = ["aster", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
aster = ["src/aster", "*/aster/src/aster"]
tests = ["tests", "*/aster/tests"]

[tool.hatch.version]
path = "src/aster/_version.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
